# simple_digit_recognizer

./: Cargo.toml  LICENSE  README.md
src/: main.rs
