[package]
name = "simple_digit_recognize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
csv = "1.2.2"
image = "0.24.6"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
